<resources>
    <string name="app_name">NeRecipe</string>
    <string name="item_recipes_list_string">Recipes</string>
    <string name="item_favourites_list_string">Favourites</string>
    <string name="item_filter_string">Filter</string>
    <string name="recipes_filter_edit_hint_string">Enter recipe name for search</string>
    <string name="text_recipe_name">Recipe name #1</string>
    <string name="text_author_name">Author name</string>
    <string name="text_kitchen_label">Kitchen:</string>
    <string name="text_category">Name of the kitchen / category</string>
    <string name="item_edit_more">Edit</string>
    <string name="item_remove_more">Remove</string>
    <string name="recipe_name_hint_string">Name of a recipe here</string>
    <string name="author_name_hint_string">Author name here</string>
    <string name="save_string">Save</string>
    <string name="cat_adapter_string01">There must be at least ONE category selected!</string>
    <string name="steps_adapter_string01">Are you sure to delete this step description?</string>
    <string name="steps_adapter_string02">No, let it stay</string>
    <string name="steps_adapter_string03">Yes, delete!</string>
    <string name="cat_feeder_string01">Please use bottom menu to switch between screens!</string>
    <string name="cat_ffeeder_string02">NeRecipe, categories selection</string>
    <string name="fav_feeder_string01">Please use bottom menu to switch between screens!</string>
    <string name="fav_feeder_string02">NeRecipe, Favourites list</string>
    <string name="recipe_new_string01">Recipe name and Author name, or Steps list can not be empty!</string>
    <string name="recipe_new_string02">" Recipe: "</string>
    <string name="recipe_new_string03">No category set</string>
    <string name="recipe_new_string04"> Creating new recipe</string>
    <string name="recipe_new_string05">" Editing: "</string>
    <string name="recipe_new_string06">Are you sure to discard the changes?</string>
    <string name="recipe_new_string07">No, stay here</string>
    <string name="recipe_new_string08">Yes, discard.</string>
    <string name="recipe_card_string01">Are you sure to delete this Recipe with descriptions?</string>
    <string name="recipe_card_string02">No, let it stay</string>
    <string name="recipe_card_string03">Yes, delete!</string>
    <string name="rec_feeder_string01">Press BACK once more to exit the App!</string>
    <string name="step_new_string01">Recipe step description can not be empty!</string>
    <string name="step_new_string02">Are you sure to discard the changes? This action can NOT be restored!</string>
    <string name="step_new_string03">No, stay here</string>
    <string name="step_new_string04">Yes, discard.</string>
    <string name="rec_feeder_layout_string01">\n\n\n\n\n\n\nNow the list of Recipes is Empty! Please press the + button to add a Recipe and fill it with data.</string>
    <string name="fav_feeder_layout_string01">Now the list of Favourite Recipes is EMPTY!\nPlease add a recipe to this list with favourite symbol.</string>
    <string name="new_step_layout_string01">New Step</string>
    <string name="nav_main_string01">NeRecipe</string>
    <string name="nav_main_string02">Recipe details</string>
    <string name="nav_main_string03">Recipe new / edit</string>
    <string name="nav_main_string04">New step</string>
    <string name="nav_main_string05">Favourite recipes</string>
    <string name="nav_main_string06">Categories</string>
    <string name="fragment_category_xml_string01">Category</string>
    <string name="step_edit_xml_string01">Enter recipe\'s step description here</string>
    <string name="step_edit_xml_string02">Delete picture</string>
</resources>