<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_background"
    android:padding="8dp"
    android:paddingBottom="16dp"
    android:clickable="true"
    android:longClickable="true"
    >

    <TextView
        android:id="@+id/recepie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/text_recipe_name"
        android:textStyle="bold"
        android:textSize="20dp"
        android:padding="8dp"
        />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/recepie_name"
        />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        android:padding="16dp"
        android:text="@string/text_author_name"
        />

    <TextView
        android:id="@+id/text_field_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        android:text="@string/text_kitchen_label"
        android:textStyle="bold"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_field_3"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        android:padding="16dp"
        android:text="@string/text_category"
        android:ellipsize="end"
        android:singleLine="true"
        />

    <ImageView
        android:id="@+id/image_like_show"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/category_text"
        app:layout_constraintBottom_toBottomOf="@id/category_text"
        app:srcCompat = "@drawable/ic_favorite_filled_24"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>