<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:paddingBottom="24dp"
    tools:context=".ui.RecipeNewFragment"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/recipe_name_hint_string"
        android:padding="8dp"
        android:singleLine="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/recipe_name"
        />


    <TextView
        android:id="@+id/text_field_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_name"
        android:text="@string/text_kitchen_label"
        android:textStyle="bold"
        android:padding="16dp"
        />

    <Spinner
        android:id="@+id/category_choose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text_field_3"
        app:layout_constraintTop_toTopOf="@id/text_field_3"
        app:layout_constraintBottom_toBottomOf="@id/text_field_3"
        app:layout_constraintEnd_toStartOf="@id/image_favourite"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/text_category"
        android:ellipsize="end"
        android:singleLine="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/image_favourite"
        android:layout_width="36dp"
        app:icon = "@drawable/ic_favourite_24"
        android:clickable="true"
        android:checkable="true"
        android:layout_height="wrap_content"
        style="@style/Widget.AppTheme.LikeCheckbox"
        app:layout_constraintTop_toTopOf="@id/category_choose"
        app:layout_constraintBottom_toBottomOf="@id/category_choose"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_field_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/new_step_button"
        android:background="@android:color/transparent"
        android:padding="16dp"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/author_name_hint_string"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author_name"
        app:layout_constraintBottom_toBottomOf="@id/author_name"
        android:text="@string/new_step_layout_string01"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/steps_list_new"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />


</androidx.constraintlayout.widget.ConstraintLayout>